changed assemblies as suggested by @nick-morhun close #18

--- a/Assets/Gemserk.SelectionHistory/Gemserk.SelectionHistory.asmdef
+++ b/Assets/Gemserk.SelectionHistory/Gemserk.SelectionHistory.asmdef
@@ -5,8 +5,9 @@
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
-    "overrideReferences": false,
+    "overrideReferences": true,
     "precompiledReferences": [],
-    "autoReferenced": true,
-    "defineConstraints": []
+    "autoReferenced": false,
+    "defineConstraints": [],
+    "versionDefines": []
 }
