configuring stuff for package dep

--- a/Assets/Gemserk.SelectionHistory/package.json
+++ b/Assets/Gemserk.SelectionHistory/package.json
@@ -3,5 +3,16 @@
   "displayName": "Selection History by Gemserk",
   "version": "1.0.2",
   "unity": "2018.1",
-  "description": "Selection history from http://blog.gemserk.com/2017/02/13/a-simple-selection-history-window-for-unity/ and https://github.com/acoppes/unity-history-window"
+  "description": "Selection history from http://blog.gemserk.com/2017/02/13/a-simple-selection-history-window-for-unity/ and https://github.com/acoppes/unity-history-window",
+  "keywords": [
+    "ui",
+    "tools",
+    "selection",
+    "history"
+  ],
+  "author": {
+    "name": "Ariel Coppes",
+    "email": "ariel.coppes@gmail.com",
+    "url": "https://blog.gemserk.com"
+  }
 }
