--- a/package.json
+++ b/package.json
@@ -15,6 +15,6 @@
   "author": {
     "name": "Ariel Coppes",
     "email": "ariel.coppes@gmail.com",
-    "url": "https://blog.gemserk.com"
+    "url": "https://arielcoppes.dev/"
   }
 }
