Moved asset type declaration to editor assembly now they use scriptablesingleton, changed to use scritpablesingleton for selection history to avoid issues creating the asset the first time. Had to change min unity version to 2020.x in order to use this new API.

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ Temp/
 Obj/
 UnityGenerated/
 Library/
+Logs/
  
 # ===================================== #
 # Visual Studio / MonoDevelop generated #
